force-app/main/default/objects/FINS_INS_Product_Insurance_Coverage__c/FINS_INS_Product_Insurance_Coverage__c.object-meta.xml
<CustomObject>
    <description>Junctiuon object between products and what coverages they have for comparison quote flow.</description>
    <label>Insurance Coverage</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>