force-app/main/default/objects/FINS_INS_Product_Insurance_Coverage__c/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <formula>Product_Coverage__r.Comparison_Text__c   &amp; &apos; - &apos;  &amp;  TEXT( Product_Coverage__r.Coverage_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Name</label>
    <type>Text</type>
</CustomField>