force-app/main/default/objects/FINS_INS_Product_Insurance_Coverage__c/fields/IsPolicyCoverage__c.field-meta.xml
<CustomField>
    <fullName>IsPolicyCoverage__c</fullName>
    <formula>TEXT(Product_Coverage__r.Coverage_Type__c) == &quot;Policy Coverage&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Coverage?</label>
    <type>Checkbox</type>
</CustomField>