force-app/main/default/objects/FINS_INS_Product_Insurance_Coverage__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insurance Coverages</relationshipLabel>
    <relationshipName>Insurance_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>